Barra superior PARTE 1

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
      <link rel="stylesheet" href="css/Styles.css" >
 </head>
 <body>
-     <h1>Olá dsmovie !</h1>
+    <header>
+          <nav class="container">
+             <h1>DsMovie</h1>
+             <a ref="https://github.com/Regis2509/Projeto-spring">/projeto-spring</a>
 
-     <h3>Promoções</h3>
+          </nav>
 
-     <h3>Agenda de filmes</h3>
+    </header>
+
+
+     
 
      
 </body>
