--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <header>
           <nav class="container">
              <h1>DsMovie</h1>
-             <a ref="https://github.com/Regis2509/Projeto-spring">/projeto-spring</a>
+             <div>
+               <img src="img/github.svg" alt="github">
+               <a href="https://github.com/Regis2509/Projeto-spring">projeto-spring</a>
 
+             </div>
+             
           </nav>
 
     </header>
